--- a/css/Styles/agendamento-md-1.css
+++ b/css/Styles/agendamento-md-1.css
@@ -112,3 +112,59 @@
 optgroup {
     font-size:20px !important;
 }
+
+
+.dropdown-content {
+    display: none; /* Esconde o menu por padrão */
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    top: 10px;
+    right: 120px; /* Ajusta a posição se necessário */
+    border-radius: 20px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #714bfa;
+    border-radius: 20px;
+}
+
+.usuario {
+    position: absolute;
+    top: 4%;
+    left: 95.5%;
+    transform: translateX(-50%);
+    z-index: 3;
+    height: auto;
+    width: 70px;
+}
+
+.usuario img {
+    width: 100%;
+    height: auto;
+}
+
+#menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    row-gap: 8px;
+
+    z-index: 10;
+
+    border: 0;
+    background: transparent;
+}
+
+#menu:hover {
+    cursor: pointer;
+}
