--- a/css/Styles/adicionar-dependente.css
+++ b/css/Styles/adicionar-dependente.css
@@ -10,6 +10,7 @@
     max-height: 580px;
     background-color: white;
     border-radius: 20px;
+    z-index: 0;
 }
 
 .container {
@@ -41,8 +42,7 @@
 }
 
 .campo-nome {
-    background-color: red;
-    background-color: rgb(184, 183, 183);
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-250px) translateY(-70px);
     min-width: 400px;
@@ -54,7 +54,7 @@
 }
 
 .campo-cpf {
-    background-color: rgb(184, 183, 183);
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-250px) translateY(-60px);
     min-width: 400px;
@@ -66,7 +66,7 @@
 }
 
 .campo-end {
-    background-color: rgb(184, 183, 183);
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-10px) translateY(-50px);
     min-width: 880px;
@@ -78,7 +78,7 @@
 }
 
 .campo-mail {
-    background-color: rgb(184, 183, 183);
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-250px) translateY(-40px);
     min-width: 400px;
@@ -89,82 +89,45 @@
     border-color: rgb(122, 100, 248);
 }
 
-.campo-req {
-    background-color: rgb(184, 183, 183);
+.campo-como {
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-250px) translateY(-30px);
     min-width: 400px;
     min-height: 25px;
 }
 
-.campo-req:hover {
+.campo-como:hover {
     border-color: rgb(122, 100, 248);
 }
 
-.campo-cert {
-    background-color: rgb(184, 183, 183);
+.campo-alerg {
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-10px) translateY(-20px);
     min-width: 880px;
     min-height: 25px;
 }
 
-.campo-cert:hover {
+.campo-alerg:hover {
     border-color: rgb(122, 100, 248);
 }
 
-.campo-senha {
-    background-color: rgb(184, 183, 183);
+.campo-nome-mae {
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
-    transform: translateX(-250px) translateY(-10px);
+    transform: translateX(230px) translateY(-380px);
     min-width: 400px;
     min-height: 25px;
 }
 
-.campo-senha:hover {
+.campo-nome-mae:hover {
     border-color: rgb(122, 100, 248);
 }
-
-.campo-confirmar-senha {
-    background-color: rgb(184, 183, 183);
-    border-radius: 15px;
-    transform: translateX(230px) translateY(-60px);
-    min-width: 400px;
-    min-height: 25px;
-}
-
-.campo-confirmar-senha:hover {
-    border-color: rgb(122, 100, 248);
-}
-
-.campo-esp {
-    background-color: rgb(184, 183, 183);
-    border-radius: 15px;
-    transform: translateX(230px) translateY(-483px);
-    min-width: 400px;
-    min-height: 25px;
-}
-
-.campo-esp:hover {
-    border-color: rgb(122, 100, 248);
-}
-
-.campo-contato {
-    background-color: rgb(184, 183, 183);
-    border-radius: 15px;
-    transform: translateX(230px) translateY(-473px);
-    min-width: 400px;
-    min-height: 25px;
-}
-
-.campo-contato:hover {
-    border-color: rgb(122, 100, 248);
-}
-
 .campo-data {
-    background-color: rgb(184, 183, 183);
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
-    transform: translateX(230px) translateY(-400px);
+    transform: translateX(230px) translateY(-370px);
     min-width: 400px;
     min-height: 25px;
 }
@@ -173,15 +136,34 @@
     border-color: rgb(122, 100, 248);
 }
 
-.campo-crm {
-    background-color: rgb(184, 183, 183);
+.campo-data2 {
+    font-weight: lighter;
+    font-size: 15px;
+    z-index: 2;
+    transform: translateX(280px) translateY(-460px);
+    color: #777676;
+}
+
+.campo-tip {
+    background-color:rgb(184, 183, 183);
     border-radius: 15px;
-    transform: translateX(230px) translateY(-390px);
+    transform: translateX(230px) translateY(-298px);
     min-width: 400px;
     min-height: 25px;
 }
 
-.campo-crm:hover {
+.campo-tip:hover {
+    border-color: rgb(122, 100, 248);
+}
+.sel-dep {
+    background-color:rgb(184, 183, 183);
+    border-radius: 15px;
+    transform: translateX(230px) translateY(-310px);
+    min-width: 414px;
+    min-height: 42px;
+}
+
+.sel-dep:hover {
     border-color: rgb(122, 100, 248);
 }
 
@@ -205,23 +187,7 @@
 .new {
     position: absolute;
     z-index: 3;
-    transform: translateY(360px);
-}
-
-.campo-cert2 {
-    font-weight: lighter;
-    font-size: 15px;
-    z-index: 2;
-    transform: translateX(350px) translateY(-368px);
-    color: #777676;
-}
-
-.campo-data2 {
-    font-weight: lighter;
-    font-size: 15px;
-    z-index: 2;
-    transform: translateX(320px) translateY(-518px);
-    color: #777676;
+    transform: translateY(330px);
 }
 
 .logo {
@@ -237,4 +203,99 @@
 .logo img {
     width: 100%;
     height: auto;
+}
+
+.selection-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.selection-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.confirm-button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.confirm-button:hover {
+    background-color: #0056b3;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    top: 10px;
+    right: 120px;
+    border-radius: 20px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #714bfa;
+    border-radius: 20px;
+}
+
+.usuario {
+    position: absolute;
+    top: 4%;
+    left: 95.5%;
+    transform: translateX(-50%);
+    z-index: 3;
+    height: auto;
+    width: 70px;
+}
+
+.usuario img {
+    width: 100%;
+    height: auto;
+}
+
+#menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    row-gap: 8px;
+
+    z-index: 10;
+
+    border: 0;
+    background: transparent;
+}
+
+#menu:hover {
+    cursor: pointer;
 }
