--- a/css/Styles/login-paciente.css
+++ b/css/Styles/login-paciente.css
@@ -31,13 +31,14 @@
     height: 100vh;
 }
 
-.portal-text{
+.portal-text {
     position: relative;
     z-index: 2;
     transform: translateY(-580px)
 }
 
-.login-form, .buttons {
+.login-form,
+.buttons {
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -59,7 +60,7 @@
 }
 
 .campo {
-    background-color:rgb(184, 183, 183);
+    background-color: rgb(184, 183, 183);
     border-radius: 15px;
 }
 
@@ -124,7 +125,7 @@ a:hover {
 
 .logo {
     position: absolute;
-    top:15%;
+    top: 15%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 3;
