--- a/css/Styles/perfil-paciente.css
+++ b/css/Styles/perfil-paciente.css
@@ -10,6 +10,7 @@
     max-height: 580px;
     background-color: white;
     border-radius: 20px;
+    z-index: 0;
 }
 
 .container {
@@ -41,7 +42,6 @@
 }
 
 .campo-nome {
-    background-color: red;
     background-color: rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-250px) translateY(-70px);
@@ -89,7 +89,7 @@
     border-color: rgb(122, 100, 248);
 }
 
-.campo-req {
+.campo-como {
     background-color: rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-250px) translateY(-30px);
@@ -97,11 +97,11 @@
     min-height: 25px;
 }
 
-.campo-req:hover {
+.campo-como:hover {
     border-color: rgb(122, 100, 248);
 }
 
-.campo-cert {
+.campo-alerg {
     background-color: rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(-10px) translateY(-20px);
@@ -109,7 +109,7 @@
     min-height: 25px;
 }
 
-.campo-cert:hover {
+.campo-alerg:hover {
     border-color: rgb(122, 100, 248);
 }
 
@@ -137,22 +137,22 @@
     border-color: rgb(122, 100, 248);
 }
 
-.campo-esp {
+.campo-nome-mae {
     background-color: rgb(184, 183, 183);
     border-radius: 15px;
-    transform: translateX(230px) translateY(-483px);
+    transform: translateX(230px) translateY(-420px);
     min-width: 400px;
     min-height: 25px;
 }
 
-.campo-esp:hover {
+.campo-nome-mae:hover {
     border-color: rgb(122, 100, 248);
 }
 
 .campo-contato {
     background-color: rgb(184, 183, 183);
     border-radius: 15px;
-    transform: translateX(230px) translateY(-473px);
+    transform: translateX(230px) translateY(-533px);
     min-width: 400px;
     min-height: 25px;
 }
@@ -173,7 +173,7 @@
     border-color: rgb(122, 100, 248);
 }
 
-.campo-crm {
+.campo-tip {
     background-color: rgb(184, 183, 183);
     border-radius: 15px;
     transform: translateX(230px) translateY(-390px);
@@ -181,7 +181,7 @@
     min-height: 25px;
 }
 
-.campo-crm:hover {
+.campo-tip:hover {
     border-color: rgb(122, 100, 248);
 }
 
@@ -208,19 +208,11 @@
     transform: translateY(360px);
 }
 
-.campo-cert2 {
-    font-weight: lighter;
-    font-size: 15px;
-    z-index: 2;
-    transform: translateX(350px) translateY(-368px);
-    color: #777676;
-}
-
 .campo-data2 {
     font-weight: lighter;
     font-size: 15px;
     z-index: 2;
-    transform: translateX(320px) translateY(-518px);
+    transform: translateX(330px) translateY(-492px);
     color: #777676;
 }
 
@@ -237,4 +229,102 @@
 .logo img {
     width: 100%;
     height: auto;
+}
+
+/* Modal de seleção de comorbidades */
+.selection-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.selection-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.confirm-button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.confirm-button:hover {
+    background-color: #0056b3;
+}
+
+.dropdown-content {
+    display: none;
+    /* Esconde o menu por padrão */
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 10px;
+    right: 120px;
+    /* Ajusta a posição se necessário */
+    border-radius: 20px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #714bfa;
+    border-radius: 20px;
+}
+
+.usuario {
+    position: absolute;
+    top: 4%;
+    left: 95.5%;
+    transform: translateX(-50%);
+    z-index: 3;
+    height: auto;
+    width: 70px;
+}
+
+.usuario img {
+    width: 100%;
+    height: auto;
+}
+
+#menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    row-gap: 8px;
+
+    z-index: 10;
+
+    border: 0;
+    background: transparent;
+}
+
+#menu:hover {
+    cursor: pointer;
 }
