--- a/css/Styles/recuperar-senha-2.css
+++ b/css/Styles/recuperar-senha-2.css
@@ -31,7 +31,7 @@
     height: 100vh;
 }
 
-.portal-text{
+.portal-text {
     position: relative;
     z-index: 2;
     transform: translateY(-580px)
@@ -43,7 +43,8 @@
     transform: translateY(-650px)
 }
 
-.login-form, .buttons {
+.login-form,
+.buttons {
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -65,7 +66,7 @@
 }
 
 .campo {
-    background-color:rgb(184, 183, 183);
+    background-color: rgb(184, 183, 183);
     border-radius: 15px;
 }
 
@@ -74,7 +75,7 @@
 }
 
 .email {
-    transform:scaleX(150%) scaleY(130%);
+    transform: scaleX(150%) scaleY(130%);
 }
 
 .button-codigo {
@@ -93,12 +94,12 @@
 }
 
 .button-codigo:hover {
-    background-color: #0056b3   ;
+    background-color: #0056b3;
 }
 
 .logo {
     position: absolute;
-    top:15%;
+    top: 15%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 3;
