--- a/css/Styles/recuperar-senha.css
+++ b/css/Styles/recuperar-senha.css
@@ -36,13 +36,14 @@
     position: relative;
 }
 
-.portal-text{
+.portal-text {
     position: relative;
     z-index: 2;
     transform: translateY(-580px)
 }
 
-.login-form, .buttons {
+.login-form,
+.buttons {
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -64,7 +65,7 @@
 }
 
 .campo {
-    background-color:rgb(184, 183, 183);
+    background-color: rgb(184, 183, 183);
     border-radius: 15px;
 }
 
@@ -73,7 +74,7 @@
 }
 
 .email {
-    transform:scaleX(150%) scaleY(130%);
+    transform: scaleX(150%) scaleY(130%);
 }
 
 .button-enviar-codigo {
@@ -92,12 +93,12 @@
 }
 
 .button-enviar-codigo:hover {
-    background-color: #0056b3   ;
+    background-color: #0056b3;
 }
 
 .logo {
     position: absolute;
-    top:15%;
+    top: 15%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 3;
