--- a/css/Styles/tela-paciente-sobre.css
+++ b/css/Styles/tela-paciente-sobre.css
@@ -41,7 +41,7 @@
         position: absolute;
         top: 17%;
         left: 4%;
-        border-radius: 20px;  
+        border-radius: 20px;
     }
 
     .logo-clinica img {
@@ -57,12 +57,13 @@
         height: 100vh;
     }
 
-    .cabecalho-text, buttons{
+    .cabecalho-text,
+    buttons {
         display: flex;
         align-items: center;
         position: absolute;
         top: 48%;
-        left: 20%; 
+        left: 20%;
     }
 
     .cabecalho-text {
@@ -70,7 +71,8 @@
         font-size: 30px;
     }
 
-    .cabecalho-text, span {
+    .cabecalho-text,
+    span {
         width: 1200px;
     }
 
@@ -84,14 +86,14 @@
     }
 
     .quadrado-cinza {
-            position: absolute;
-            top: 83%;
-            left: 8%;
-            width: 100%;
-            height: 400px;
-            max-width: 1445px;
-            background-color: rgb(199, 199, 199);
-            border-radius: 30px;
+        position: absolute;
+        top: 83%;
+        left: 8%;
+        width: 100%;
+        height: 400px;
+        max-width: 1445px;
+        background-color: rgb(199, 199, 199);
+        border-radius: 30px;
     }
 
     .texto {
@@ -104,26 +106,28 @@
         max-width: 80%;
         line-height: 1.5;
     }
-    
+
     .dropdown-content {
-        display: none; /* Esconde o menu por padrão */
+        display: none;
+        /* Esconde o menu por padrão */
         position: absolute;
         background-color: white;
         min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
         top: 10px;
-        right: 120px; /* Ajusta a posição se necessário */
+        right: 120px;
+        /* Ajusta a posição se necessário */
         border-radius: 20px;
     }
-    
+
     .dropdown-content a {
         color: black;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
     }
-    
+
     .dropdown-content a:hover {
         background-color: #714bfa;
         border-radius: 20px;
@@ -149,13 +153,13 @@
         flex-direction: column;
         align-items: flex-end;
         row-gap: 8px;
-    
+
         z-index: 10;
-    
+
         border: 0;
         background: transparent;
     }
-    
+
     #menu:hover {
         cursor: pointer;
     }
