--- a/css/Styles/tala-profissional-agenda.css
+++ b/css/Styles/tala-profissional-agenda.css
@@ -79,6 +79,7 @@
         max-height: 650px;
         background-color: white;
         border-radius: 20px;
+        overflow: hidden;
     }
 
     .container {
